plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.14'
}

repositories {
    mavenCentral()
}

dependencies{
    implementation "org.openjfx:javafx-controls:23"
    implementation "org.openjfx:javafx-fxml:23"
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(23)
    }
}

application {
    mainClass = 'org.example.Main'
    // JVM-Argumente, damit die Module geladen werden
    applicationDefaultJvmArgs = [
            "--module-path", "G:/javafx-sdk-XX/lib",
            "--add-modules", "javafx.controls,javafx.fxml"
    ]
}

javafx {
    version = '23'
    modules = ['javafx.controls', 'javafx.fxml']
    sdk = file("G:/javafx-sdk-XX")
}
